# rnv-icon-builder

./: .gitignore  README.md  RNVIconBuilder.pyproj  RNV_Icon_Builder.py  RNV_Icon_Builder.spec  TEST_SYSTEM.md  __init__.py  build_linux.sh  build_windows.bat  clean_python_cache.bat  clean_python_cache.sh  cli.py  coveragerc  pyproject.toml  pytest.ini  requirements-test.txt  run_tests.py  setup.cfg  sitecustomize.py  test_rnv_icon_builder.py
.github/workflows/: tests-linux.yml  tests-windows.yml
core/: __init__.py  batch_processor.py  export_history.py  folder_watcher.py  icon_builder_core.py  image_processor.py  preset_manager.py  project_manager.py  recent_files.py  session_manager.py
docs/: INTERNALS.md
tests/: conftest.py  snapshots.json  test_application.py  test_benchmarks.py  test_cli.py  test_error_handler.py  test_folder_watcher.py  test_image_processor.py  test_main_window.py  test_managers.py  test_preview_utils.py  test_properties.py  test_settings_dialog.py  test_snapshots.py  test_ui_interactions.py  test_utilities.py  test_workers.py
ui/: __init__.py  about_dialog.py  base_dialog.py  colors.py  context_preview.py  debug_button.py  ico_analyzer.py  image_adjustments.py  metadata_panel.py  preview_utils.py  settings_dialog.py  theme_manager.py
utils/: __init__.py  async_file_ops.py  config.py  dialog_helper.py  error_handler.py  file_utils.py  font_loader.py  logger.py  pixmap_cache.py  signal_manager.py
