[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rnv-icon-builder"
version = "3.0.0"
description = "Professional multi-resolution ICO file builder with theme support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "RNV"},
]
keywords = ["icon", "ico", "favicon", "pyqt6", "image-processing", "desktop-app"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Software Development :: Build Tools",
    "Framework :: Qt",
]
dependencies = [
    "PyQt6>=6.6.0",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/RNVizion/RNV_Icon_Builder"
Repository = "https://github.com/RNVizion/RNV_Icon_Builder"
Issues = "https://github.com/RNVizion/RNV_Icon_Builder/issues"

[project.scripts]
rnv-icon-builder = "RNV_Icon_Builder:main"
rnv-icon-cli = "cli:main"

[tool.setuptools.packages.find]
include = ["core*", "ui*", "utils*"]

[tool.setuptools.package-data]
"*" = ["resources/**/*"]
